--- a/.env
+++ b/.env
@@ -28,5 +28,6 @@ APP_SECRET=6f491e6c1a4f7fd3f86f3c922fb6ea93
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
-DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+# DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root:123456@127.0.0.1:3306/customer_support?serverVersion=mariadb-10.5.15&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
